# CheminformaticsPackage26

./: .gitignore  README.md  environment.yml  pyproject.toml
cinf26pk/: __init__..py  __init__.py
cinf26pk/core/: __init__.py  filenames.py  io.py  utils.py
cinf26pk/pubchem/: __init__.py  http.py  properties.py  search.py
