[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cinf26pk"
version = "0.1.0"
description = "Supporting Python packages for the 2026 Cheminformatics course."
authors = [
    { name = "Robert Belford", email = "rbelford@ualr.edu" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/rebelford"

[tool.setuptools]
packages = ["cinf26pk"]
